# GardenShower-TINS2020

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE  README.md  allegro.sublime-project
cmake/: FindAllegro5.cmake
data/: DELETEME.txt
src/: BaseScene.cpp  BaseScene.h  GardenA.cpp  GardenA.h  TitleScreen.cpp  globals.h  input.cpp  input.h  main.cpp  main.h  player.cpp  rect.cpp  scene-types.cpp  scene-types.h  scene.cpp  scene.h
src/include/: BaseScene.h  TitleScreen.h  main.h  player.h  rect.h
